# autoactive

./: .gitignore  README.md  pyproject.toml
autoactive/: __init__.py  __main__.py  autoactive.py  wayland_patch.py
